5375 utmpd(1M) core dumps when WTMPX_UPDATE_FREQ is zero Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Marcel Telka <marcel@telka.sk> Approved by: Dan McDonald <danmcd@omniti.com>